fixes alignment

--- a/app/assets/stylesheets/pages/_matches.scss
+++ b/app/assets/stylesheets/pages/_matches.scss
@@ -83,8 +83,8 @@
 
   }
   span{
-    margin-left: -25px;
-    margin-right: 170px;
+    margin-left: 85px;
+    margin-right: 150px;
   }
   i{
 
